apps/pilke/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pilke-api
  namespace: pilke
spec:
  selector:
    app: pilke-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
